--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@react-navigation/bottom-tabs": "^5.7.1",
     "@react-navigation/native": "^5.7.0",
     "@react-navigation/stack": "^5.7.0",
+    "babel-plugin-dotenv-import": "^2.1.0",
     "galio-framework": "^0.7.1",
     "native-base": "^2.13.12",
     "react": "16.13.1",
     "react-native": "0.63.0",
+    "react-native-dotenv": "^2.2.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.1.1",
