--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^5.7.1",
     "@react-navigation/native": "^5.7.0",
     "@react-navigation/stack": "^5.7.0",
+    "axios": "^0.19.2",
     "babel-plugin-dotenv-import": "^2.1.0",
     "galio-framework": "^0.7.1",
     "native-base": "^2.13.12",
