--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-dotenv": "^2.2.0",
     "react-native-gesture-handler": "^1.6.1",
     "react-native-reanimated": "^1.9.0",
+    "react-native-render-html": "^4.2.1",
     "react-native-safe-area-context": "^3.1.1",
     "react-native-screens": "^2.9.0",
     "react-native-webview": "^10.3.2",
