--- a/ios/Podfile
+++ b/ios/Podfile
@@ -10,6 +10,8 @@ target 'LibraryMobile' do
 
   pod 'react-native-webview', :path => '../node_modules/react-native-webview'
 
+  pod 'react-native-image-picker', :path => '../node_modules/react-native-image-picker'
+
   target 'LibraryMobileTests' do
     inherit! :complete
     # Pods for testing
